--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: kubeconform-helm
   name: Kubeconform Helm
   description: Run kubeconform for Helm charts
-  language: script
+  language: python
   entry: scripts/pre-commit.py
   files: ^(helper-|)charts/[^/]+/(\.kubeconform|\.helmignore|templates/NOTES.txt|.*\.(ya?ml|json|tpl))$
   require_serial: true
