--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ python_requires = ~=3.12
 
 [options.entry_points]
 console_scripts =
-    pre-commit = scripts.pre-commit:main
+    pre-commit = scripts.pre_commit:main
