--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ python_requires = ~=3.12
 
 [options.entry_points]
 console_scripts =
-    pre-commit = scripts.pre_commit:main
+    pre-commit = pre_commit:main
