--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [options]
 packages = find:
 package_dir =
-    = scripts
+    = .
 install_requires =
     ruamel.yaml<0.18.0
 python_requires = ~=3.12
@@ -9,3 +9,7 @@ python_requires = ~=3.12
 [options.entry_points]
 console_scripts =
     pre-commit = pre_commit:main
+
+[options.packages.find]
+where = .
+include = scripts*
