scripts.pre_commit:main

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ python_requires = ~=3.12
 
 [options.entry_points]
 console_scripts =
-    pre-commit = pre_commit:main
+    pre-commit = scripts.pre_commit:main
 
 [options.packages.find]
 where = .
