--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ packages = find:
 package_dir =
     = .
 install_requires =
-    ruamel.yaml<0.18.0
+    pyyaml~=6.0
 python_requires = ~=3.12
 
 [options.entry_points]
